--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apis </title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+         <div class="col">
+              <div class="col-12">
+                   <h1>Aqui se muestra la info de la API JSONPlaceholder</h1>
+                  <div id="placeHolder"></div>
+              </div>
+            </div>
+        </div>
+    </div>
     
 </body>
+<script src="script.js"></script>
 </html>
+
